# scatter

./: .dockerignore  .env.example  .gitignore  Caddyfile  DEPLOY.md  README.md  RELEASE.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  fly.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  release.yml
apps/coordinator/: .env.example  Dockerfile  package.json  tsconfig.build.json  tsconfig.json
apps/coordinator/src/: assign.ts  auth.ts  db.ts  env.ts  index.ts  mailer.ts  node-hub.ts
apps/coordinator/test/: assign-no-stacking.test.ts  assign.test.ts  auth.test.ts  files-upload-plan.test.ts  login-code.test.ts  magic-link.test.ts  migrations.test.ts
apps/gui/: DESIGN.md  index.html  package.json  vite.config.ts
apps/gui/src/: App.tsx  index.css
apps/gui/src-tauri/: Cargo.toml  tauri.conf.json
apps/gui/src-tauri/capabilities/: default.json
apps/gui/src-tauri/icons/: icon.icns
apps/gui/src-tauri/src/: lib.rs  main.rs  storage.rs  ws_client.rs
apps/node/: package.json  tsconfig.json
apps/node/service/: README.md  scatter-node.service  tools.scatter.node.plist  windows-service.md
apps/node/src/: cli.ts  config.ts  coordinator.ts  daemon.ts  events.ts  logger.ts  storage.ts  ws-client.ts
apps/node/test/: config.test.ts  coordinator.test.ts  storage.test.ts
apps/web/: Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
apps/web/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
apps/web/components/: Footer.tsx  Nav.tsx
apps/web/lib/: api.ts  auth-context.tsx  download.ts  env.ts  session.ts  (+1 more)
(+16 files in other folders)
